# sonetto-rs

./: .gitignore  Cargo.toml  README.md  README.rs
common/: Cargo.toml  Config.toml
common/src/: config.rs  lib.rs  time.rs
database/: Cargo.toml
database/migrations/: 002_player_state.sql  013_hero_groups.sql  014_hero_group_snapshot.sql  021_user_summons.sql  034_user_activity101_claims.sql  035_dungeon_records.sql  040_user_store_goods.sql  041_user_mails.sql  042_banner_schedule.sql
database/src/db/: mod.rs  starter_data.rs
database/src/db/game/: activity101.rs  currencies.rs  dungeons.rs  equipment.rs  heroes.rs  items.rs  mod.rs  sign_in.rs  stories.rs  summon.rs
database/src/db/user/: account.rs
database/src/models/game/: achievements.rs  block_packages.rs  command_post.rs  currencies.rs  equipment.rs  hero_group_snapshots.rs  heros.rs  items.rs  player_card.rs  summon.rs  weekwalk.rs
gameserver/: Cargo.toml
gameserver/src/: client.rs  error.rs  handler.rs  lib.rs  main.rs
gameserver/src/cmd/: mod.rs
gameserver/src/cmd/activity101/: get101_bonus.rs  get101_infos.rs
gameserver/src/cmd/activity125/: get_act125_infos.rs
gameserver/src/cmd/activity163/: act163_get_info.rs  mod.rs
gameserver/src/cmd/activity208/: get_act208_info.rs  mod.rs
gameserver/src/cmd/activity209/: get_act209_info.rs  mod.rs
gameserver/src/cmd/charge/: get_charge_push_info.rs  get_month_card_info.rs  mod.rs
gameserver/src/cmd/command_post/: get_command_post_info.rs  mod.rs
gameserver/src/cmd/destiny_stone/: destiny_stone_use.rs
gameserver/src/cmd/dungeon/: auto_round.rs  begin_round.rs  dungeon_end_dungeon.rs  fight_end_fight.rs  get_dungeon.rs  get_fight_oper.rs  get_fight_record_group.rs  start_dungeon.rs
gameserver/src/cmd/equip/: equip_break.rs  equip_lock.rs  equip_refine.rs  equip_strengthen.rs  get_equip_info.rs  mod.rs
gameserver/src/cmd/friend/: delete_offline_msg.rs  get_apply_list.rs  get_blacklist.rs  get_friend_info_list.rs  get_recommended_friends.rs  mod.rs  send_msg.rs  util.rs
gameserver/src/cmd/gm/: mod.rs
gameserver/src/cmd/guide/: finish_guide.rs
gameserver/src/cmd/hero/: choice_hero_3123_weapon.rs  hero_default_equip.rs  hero_info_list.rs  hero_level_up.rs  hero_rank_up.rs  hero_red_dot_read.rs  hero_touch.rs  hero_upgrade_skill.rs  mark_hero_favor.rs  mod.rs  set_show_hero_unique_ids.rs  (+1 more)
gameserver/src/handlers/: achievements.rs  antique.rs  charge.rs  chat.rs  events.rs  gacha.rs  misc.rs  mod.rs  necro_story.rs  story.rs
gameserver/src/network/: client.rs  handler.rs  mod.rs  packet.rs
gameserver/src/state/: connection.rs  mod.rs  player.rs
gameserver/src/util/: common.rs  data_loader.rs  inventory.rs  mod.rs  push.rs
gameserver/src/utils/: data_loader.rs  mod.rs  push.rs
lib/config/: Cargo.toml  build.rs
lib/config/configs/: activity101.rs  activity174_role.rs  antique.rs  battle.rs  bgm_switch.rs  bonus.rs  bp.rs  bp_des.rs  bp_lv_bonus.rs  bp_task.rs  chapter.rs  character.rs  character_cosume.rs  character_destiny.rs  character_destiny_facets.rs  character_level.rs  character_rank.rs  character_talent.rs  character_voice.rs  cloth_level.rs  currency.rs  episode.rs  equip.rs  equip_break_cost.rs  equip_skill.rs  equip_strengthen.rs  guide.rs  hero_trial.rs  insight_item.rs  item.rs  mod.rs  monster.rs  monster_skill_template.rs  monster_template.rs  month_card.rs  open.rs  power_item.rs  skill.rs  skill_behavior.rs  skill_buff.rs  (+11 more)
lib/config/excel_confgen/: emit_file.rs  emit_root.rs  emit_struct.rs  emit_table.rs  mod.rs  pipeline.rs  rust_ident.rs  rust_types.rs  schema_infer.rs  schema_inspect.rs  tables.rs
lib/config/src/: lib.rs
sdkserver/: Cargo.toml
sdkserver/src/: main.rs
sdkserver/src/handlers/: mod.rs  router.rs
sdkserver/src/models/: request.rs  response.rs
(+335 files in other folders)
