[workspace]
members = ["common", "database", "gameserver", "protocol", "sdkserver", "lib/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2" }
reqwest = "0.12.24"
tokio = { version = "1.48", features = ["full"] }
flate2 = "1.1.5"

prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"

walkdir = "2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
toml = "0.9.8"
byteorder = "1.5.0"
bytes = "1.11"
hex = "0.4.3"

once_cell = "1.21.3"
rand = "0.8.5"
heck = "0.5.0"

async-trait = "0.1.89"
emitix = "1.1.3"
dashmap = "6.1"
lazy_static = "1.5.0"
futures = "0.3.31"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }


# errors
thiserror = "2.0.17"
paste = "1.0.15"
anyhow = "1.0.100"
chrono = "0.4.42"

bcrypt = "0.17.1"

# logging
ansi_term = "0.12.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"


# Code Generation
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"
quote = "1.0"

config = { path = "lib/config" }
common = { path = "common" }
database = { path = "database" }
gameserver = { path = "gameserver" }
protocol = { path = "protocol" }
sdkserver = { path = "sdkserver" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
