[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber.workspace = true
ansi_term.workspace = true
once_cell.workspace = true
chrono.workspace = true
toml.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
