[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
sqlx.workspace = true
serde.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
common.workspace = true
serde_json.workspace = true
chrono.workspace = true
config.workspace = true
protocol.workspace = true
