[package]
name = "gameserver"
version.workspace = true
edition.workspace = true


[dependencies]
byteorder.workspace = true
tokio.workspace = true
common.workspace = true
protocol.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
dashmap.workspace = true
sqlx.workspace = true
database.workspace = true
prost.workspace = true
serde.workspace = true
anyhow.workspace = true
data.workspace = true
chrono.workspace = true
rand.workspace = true
once_cell.workspace = true
