[package]
name = "sdkserver"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
common.workspace = true
flate2.workspace = true
paste.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
sqlx.workspace = true
database.workspace = true
gameserver.workspace = true
chrono.workspace = true
anyhow.workspace = true
config.workspace = true
