[package]
name = "config"
edition.workspace = true
version.workspace = true


[build-dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir.workspace = true
heck.workspace = true

[dependencies]
once_cell.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
